--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.appngo.omisetest" >
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="ru.appngo.omisetest"
+    >
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -8,8 +13,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".charities.CharitiesActivity" >
+        android:theme="@style/AppTheme"
+        >
+        <activity android:name=".charities.CharitiesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
