experiment: execute espresso test against robolectric

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,11 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -35,6 +40,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
+
+    testImplementation 'androidx.test.ext:junit:1.1.1'
+    testImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'androidx.test:rules:1.2.0'
+    testImplementation "org.robolectric:robolectric:4.3.1"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "com.squareup.picasso:picasso:2.71828"
 
